--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "postinstall": "npm run build"
   },
   "author": "",
   "license": "ISC",
